made a simple quiz app

--- a/bg-color-changer/index.html
+++ b/bg-color-changer/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>BG COLOR CHANGER</title>
     <link rel="stylesheet" href="styles.css">
